[project]
name = "fbt-dbfill"
version = "0.1.0"
description = "python script to fill postgres db with fantasy data "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "jsonpickle>=4.1.1",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
